Fixed custom crossover values, fixed button color on iOS, added copy-paste points, testing iOS export
TODO:
- adjust smoothing of the graph (highchart grouping)
- add draggable points
- angular update

--- a/src/app/target-curve-points/target-curve-points.component.scss
+++ b/src/app/target-curve-points/target-curve-points.component.scss
@@ -1,10 +1,13 @@
 .container {
-  display: flex; flex-direction: column; max-width: 212px; padding-top: 20px; justify-items: stretch;
+  display: flex;
+  flex-direction: column;
+  //max-width: 212px;
+  padding-top: 20px;
+  justify-items: stretch;
 }
 
 .point-row {
   display: flex;
-
   animation: show-row 600ms 100ms cubic-bezier(0.38, 0.97, 0.56, 0.76) forwards;
   // Prestate
   opacity: 60%;
@@ -19,6 +22,8 @@
   cursor: pointer;
   background: none;
   border: none;
+  flex-shrink: 0;
+  width: 30px
 }
 
 @keyframes show-row {
